# ty-generated-typestubs

./: CMakeLists.txt  README.md  check_in_project.sh  check_out_of_project.sh  pyproject.toml  script.py  ty_check_out_of_project.sh
python/ty_generated_typestubs/: __init__.py
tests/: test_add.py
