[build-system]
requires = ["scikit-build-core", "nanobind"]
build-backend = "scikit_build_core.build"

[project]
name = "ty-generated-typestubs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "nanobind",
    "pytest",
]

[dependency-groups]
dev = [
    "ipython>=8.38.0",
    "ty>=0.0.18",
]
