[build-system]
requires = ["scikit-build-core", "nanobind"]
build-backend = "scikit_build_core.build"
wheel.packages = ["python/ty_generated_typestubs"]

[project]
name = "ty-generated-typestubs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "nanobind",
    "pytest",
]

[dependency-groups]
dev = [
    "ipython>=8.38.0",
    "pre-commit>=4.5.1",
    "pyrefly>=0.53.0",
    "pytest>=9.0.2",
    "ruff>=0.15.2",
    "ty>=0.0.18",
]
